// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$autoload should fail with unexisting handlers 1`] = `
{
  "errorCode": "E_UNMATCHED_DEPENDENCY",
  "errorParams": [
    "getPing",
  ],
  "importerCalls": [],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "🚫 - Service "getPing" not found in "/home/whoami/my-whook-project/src/handlers/getPing".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
}
`;

exports[`$autoload should work for API 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/services/API.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "API" found in "/home/whoami/my-whook-project/src/services/API.js".",
    ],
    [
      "debug",
      "💿 - Loading "API" initializer from "/home/whoami/my-whook-project/src/services/API.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/services/API",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "API",
    "path": "/home/whoami/my-whook-project/src/services/API.js",
  },
}
`;

exports[`$autoload should work for SERVICE_NAME_MAP 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/services/SERVICE_NAME_MAP.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "SERVICE_NAME_MAP" found in "/home/whoami/my-whook-project/src/services/SERVICE_NAME_MAP.js".",
    ],
    [
      "debug",
      "💿 - Loading "SERVICE_NAME_MAP" initializer from "/home/whoami/my-whook-project/src/services/SERVICE_NAME_MAP.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/services/SERVICE_NAME_MAP",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "SERVICE_NAME_MAP",
    "path": "/home/whoami/my-whook-project/src/services/SERVICE_NAME_MAP.js",
  },
}
`;

exports[`$autoload should work for a config constant 1`] = `
{
  "importerCalls": [],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
  ],
  "resolveCalls": [],
  "result": {
    "initializer": {
      "$name": "CONFIG",
      "$singleton": true,
      "$type": "constant",
      "$value": {
        "testConfig": "test",
      },
    },
    "name": "CONFIG",
    "path": "internal://CONFIG",
  },
}
`;

exports[`$autoload should work for configs 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/services/CONFIGS.js",
    ],
  ],
  "injectorCalls": [],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "CONFIGS" found in "/home/whoami/my-whook-project/src/services/CONFIGS.js".",
    ],
    [
      "debug",
      "💿 - Loading "CONFIGS" initializer from "/home/whoami/my-whook-project/src/services/CONFIGS.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/services/CONFIGS",
    ],
  ],
  "result": {
    "initializer": {
      "CONFIG": {
        "testConfig": "test",
      },
    },
    "name": "CONFIGS",
    "path": "/home/whoami/my-whook-project/src/services/CONFIGS.js",
  },
}
`;

exports[`$autoload should work for handlers 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "getPing" found in "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPing" initializer from "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work for handlers hash 1`] = `
{
  "HANDLERS": {
    "getPing": [Function],
  },
  "importerCalls": [],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
    [
      [
        "API",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
  ],
  "resolveCalls": [],
  "result": {
    "initializer": [Function],
    "name": "HANDLERS",
    "path": "internal://HANDLERS",
  },
}
`;

exports[`$autoload should work for handlers in sub plugins 1`] = `
{
  "importerCalls": [
    [
      "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "🚫 - Service "getPing" not found in "/home/whoami/my-whook-project/src/handlers/getPing".",
    ],
    [
      "debug",
      "💿 - Service "getPing" found in "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPing" initializer from "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
    [
      "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPing",
    "path": "/var/lib/node/node_modules/@whook/cli/dist/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work for name mapped handlers 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPingMock.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "📖 - Using SERVICE_NAME_MAP to route "getPing" to "getPingMock".",
    ],
    [
      "debug",
      "💿 - Service "getPingMock" found in "/home/whoami/my-whook-project/src/handlers/getPingMock.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPing" initializer via "getPingMock" resolution from "/home/whoami/my-whook-project/src/handlers/getPingMock.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPingMock",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPingMock",
    "path": "/home/whoami/my-whook-project/src/handlers/getPingMock.js",
  },
}
`;

exports[`$autoload should work for name mapped handlers with dynamic SERVICE_NAME_MAP 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPingMock.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "SERVICE_NAME_MAP",
      ],
    ],
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "📖 - Using SERVICE_NAME_MAP to route "getPing" to "getPingMock".",
    ],
    [
      "debug",
      "💿 - Service "getPingMock" found in "/home/whoami/my-whook-project/src/handlers/getPingMock.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPing" initializer via "getPingMock" resolution from "/home/whoami/my-whook-project/src/handlers/getPingMock.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPingMock",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPingMock",
    "path": "/home/whoami/my-whook-project/src/handlers/getPingMock.js",
  },
}
`;

exports[`$autoload should work for path mapped handlers 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "📖 - Using INITIALIZER_PATH_MAP to resolve the "getPing" module path.",
    ],
    [
      "debug",
      "💿 - Service "getPing" found in "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPing" initializer from "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-other-project/src/handlers/getPing.js",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work for wrapped handlers 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
    [
      [
        "WRAPPERS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "getPingWrapped" found in "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPingWrapped" initializer from "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPingWrapped",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work with empty wrappers 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
    [
      [
        "WRAPPERS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "getPingWrapped" found in "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPingWrapped" initializer from "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPingWrapped",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;

exports[`$autoload should work with no wrappers 1`] = `
{
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing.js",
    ],
  ],
  "injectorCalls": [
    [
      [
        "CONFIGS",
      ],
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "debug",
      "💿 - Service "getPing" found in "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
    [
      "debug",
      "💿 - Loading "getPing" initializer from "/home/whoami/my-whook-project/src/handlers/getPing.js".",
    ],
  ],
  "resolveCalls": [
    [
      "/home/whoami/my-whook-project/src/handlers/getPing",
    ],
  ],
  "result": {
    "initializer": [Function],
    "name": "getPing",
    "path": "/home/whoami/my-whook-project/src/handlers/getPing.js",
  },
}
`;
